--- a/archives/2020-12-10.md
+++ b/archives/2020-12-10.md
@@ -1,61 +1,67 @@
 # 2020-12-10
 
-共 97 条
+共 103 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Thu Dec 10 2020 08:03:28 GMT+0800 (CST) -->
+<!-- 最后更新时间 Thu Dec 10 2020 09:28:46 GMT+0800 (CST) -->
 1. [如何看待网传字节老板张一鸣在公司《原神》群内活捉员工上班摸鱼？](https://www.zhihu.com/question/434062594)
-1. [专家建议放开三胎，以应对少子化老龄化带来的结构性危机，能实际提升生育率吗？少子化的原因还有什么？](https://www.zhihu.com/question/434034776)
 1. [CDPR 新游戏《赛博朋克 2077》出了，实际游戏体验如何？](https://www.zhihu.com/question/434076958)
+1. [专家建议放开三胎，以应对少子化老龄化带来的结构性危机，能实际提升生育率吗？少子化的原因还有什么？](https://www.zhihu.com/question/434034776)
 1. [成都 20 岁确诊女孩发声致歉「负责酒吧气氛和营销，当时不知道奶奶确诊」，网络暴力「狂欢」该如何整顿？](https://www.zhihu.com/question/434001993)
-1. [如何看待韩国「素媛案」主犯赵斗顺称喝醉酒记不起犯罪事实，多次请愿「恳切地希望一定要和受害者见面」？](https://www.zhihu.com/question/434005940)
 1. [别人把男朋友送我的星巴克杯子碰坏了，赔了我一个新的却要我把坏的给他 ，我不想给，符合道理吗?](https://www.zhihu.com/question/433621924)
-1. [公司要我上一家公司的源代码，该不该给？](https://www.zhihu.com/question/425249943)
+1. [如何看待韩国「素媛案」主犯赵斗顺称喝醉酒记不起犯罪事实，多次请愿「恳切地希望一定要和受害者见面」？](https://www.zhihu.com/question/434005940)
+1. [为什么有很多男生打游戏就可以很快乐？](https://www.zhihu.com/question/347424469)
 1. [如何从情感心理学看待清华一学生在姐弟恋中劈腿与贬低女友？为什么女生条件和资历比男生好还是会被 pua？](https://www.zhihu.com/question/434041754)
-1. [如何看待男子泄漏成都 20 岁确诊女孩隐私被处罚，供认不讳并「深刻认识到自己的错误」？](https://www.zhihu.com/question/434034164)
 1. [谁能给我讲个能笑半年的笑话？](https://www.zhihu.com/question/395196942)
-1. [如何看待英国开始大规模接种别国研发的新冠疫苗，英卫生大臣落泪，并称「为自己是英国人而骄傲」？](https://www.zhihu.com/question/434038297)
-1. [如果花两百万让你的孩子获得上985或211的机会，你愿意么？](https://www.zhihu.com/question/405812247)
+1. [公司要我上一家公司的源代码，该不该给？](https://www.zhihu.com/question/425249943)
 1. [秦始皇的生父到底是吕不韦还是嬴异人？](https://www.zhihu.com/question/23559511)
-1. [哪些单机手机游戏让你玩两分钟就惊呼「太好玩了」？为什么？](https://www.zhihu.com/question/25984324)
-1. [如何看待「南医大杀人案」凶手被判死刑后，称「我应该不是个恶的人，我不是带着恶去做恶事的人」？](https://www.zhihu.com/question/434062209)
-1. [11 月全国居民消费价格同比下降 0.5%，食品价格下降 2.0%，还有哪些值得关注的信息？](https://www.zhihu.com/question/433997080)
-1. [《天官赐福》即将影视化，所有角色开放选角，你觉得哪些人来出演最合适？](https://www.zhihu.com/question/434020691)
-1. [像雷军这样的大佬超强的学习能力是如何来的?](https://www.zhihu.com/question/432062587)
+1. [如何看待英国开始大规模接种别国研发的新冠疫苗，英卫生大臣落泪，并称「为自己是英国人而骄傲」？](https://www.zhihu.com/question/434038297)
+1. [如何看待男子泄漏成都 20 岁确诊女孩隐私被处罚，供认不讳并「深刻认识到自己的错误」？](https://www.zhihu.com/question/434034164)
+1. [如果花两百万让你的孩子获得上985或211的机会，你愿意么？](https://www.zhihu.com/question/405812247)
 1. [室友太大方了怎么办？](https://www.zhihu.com/question/430141321)
+1. [如何评价游戏《赛博朋克2077》?](https://www.zhihu.com/question/433574776)
 1. [三星取消附赠充电器耳机获证实，如何评价这一行为？其它手机厂商会跟随吗？](https://www.zhihu.com/question/434042720)
+1. [像雷军这样的大佬超强的学习能力是如何来的?](https://www.zhihu.com/question/432062587)
+1. [《天官赐福》即将影视化，所有角色开放选角，你觉得哪些人来出演最合适？](https://www.zhihu.com/question/434020691)
 1. [只吃鸡蛋鸡胸肉和喝牛奶不吃碳水 这样减脂可以吗?](https://www.zhihu.com/question/419594552)
-1. [如何看待欧冠小组赛巴黎圣日耳曼 vs 伊斯坦布尔比赛中由于种族言论导致比赛提前结束？](https://www.zhihu.com/question/433985342)
-1. [可以推荐一下很贵但很值的买的东西吗？](https://www.zhihu.com/question/268153800)
-1. [难道就没有人看过《犴达罕》吗？怎么评价这部纪录片？](https://www.zhihu.com/question/25252548)
 1. [如何看待米哈游被冲，网友号召集体开发票?](https://www.zhihu.com/question/433664577)
+1. [哪些高校不是985、211，但前途一片光明，值得我们努力呀？](https://www.zhihu.com/question/433611700)
+1. [如何看待「南医大杀人案」凶手被判死刑后，称「我应该不是个恶的人，我不是带着恶去做恶事的人」？](https://www.zhihu.com/question/434062209)
+1. [可以推荐一下很贵但很值的买的东西吗？](https://www.zhihu.com/question/268153800)
+1. [如何看待欧冠小组赛巴黎圣日耳曼 vs 伊斯坦布尔比赛中由于种族言论导致比赛提前结束？](https://www.zhihu.com/question/433985342)
 1. [你后悔为了更好的大学而去学生化环材吗？](https://www.zhihu.com/question/427513301)
-1. [FDA 确认辉瑞疫苗安全有效，英国正式开打，对疫情会产生怎样的影响？](https://www.zhihu.com/question/433964956)
+1. [难道就没有人看过《犴达罕》吗？怎么评价这部纪录片？](https://www.zhihu.com/question/25252548)
+1. [相爱的女朋友去世是什么感受？](https://www.zhihu.com/question/352794081)
 1. [大家对宿舍里养猫是什么看法？](https://www.zhihu.com/question/358982818)
-1. [如何评价炉石主播安德罗妮打魔兽实力？](https://www.zhihu.com/question/434047884)
+1. [如果中国传武“大师”的内容都是真的会怎样，会发生什么脑洞故事？](https://www.zhihu.com/question/395074000)
+1. [哪些单机手机游戏让你玩两分钟就惊呼「太好玩了」？为什么？](https://www.zhihu.com/question/25984324)
 1. [在日本留学，过了二十多天，情绪突然低沉了好多怎么办？](https://www.zhihu.com/question/433849570)
+1. [放弃一个你喜欢很久的人，是什么感觉？](https://www.zhihu.com/question/401041691)
+1. [LeetCode按照怎样的顺序来刷题比较好？](https://www.zhihu.com/question/36738189)
+1. [11 月全国居民消费价格同比下降 0.5%，食品价格下降 2.0%，还有哪些值得关注的信息？](https://www.zhihu.com/question/433997080)
+1. [2021 秋招，你还会推荐应届生进入互联网行业吗，这个行业的前景如何？](https://www.zhihu.com/question/413180643)
+1. [晒被子后有「太阳味」的原因是什么？](https://www.zhihu.com/question/20137232)
+1. [父母教育孩子的错误方式有哪些？](https://www.zhihu.com/question/419946924)
+1. [你觉得你长的好看吗？](https://www.zhihu.com/question/429414606)
+1. [有哪些超级治愈的句子？](https://www.zhihu.com/question/432728669)
+1. [怎么样才可以戒掉网瘾呢？](https://www.zhihu.com/question/432321548)
+1. [有哪些家居决定，会让入住后家里轻松保持整洁？](https://www.zhihu.com/question/429611035)
+1. [有没有那种虐心古言？](https://www.zhihu.com/question/340288963)
+1. [假设世界上只有你一个人，你该怎样找到活着的价值以及乐趣？](https://www.zhihu.com/question/433468725)
+1. [如何评价综艺《令人心动的offer》第二季第五期？](https://www.zhihu.com/question/434086284)
+1. [如何看待《令人心动的offer》第二季第五期丁辉被淘汰？](https://www.zhihu.com/question/434106189)
+1. [现在高二，很焦虑，面对未来很迷茫，可以开导我一下吗？](https://www.zhihu.com/question/433508252)
+1. [年前辞职和年后辞职哪一个好处大?](https://www.zhihu.com/question/356785852)
+1. [FDA 确认辉瑞疫苗安全有效，英国正式开打，对疫情会产生怎样的影响？](https://www.zhihu.com/question/433964956)
+1. [如何评价炉石主播安德罗妮打魔兽实力？](https://www.zhihu.com/question/434047884)
 1. [2020 年下半年教师资格证笔试成绩公布，大家有什么感想？](https://www.zhihu.com/question/433850699)
 1. [吉他每天必练的基本功有哪些？](https://www.zhihu.com/question/389876898)
-1. [放弃一个你喜欢很久的人，是什么感觉？](https://www.zhihu.com/question/401041691)
 1. [你第一首听哭的歌是什么？](https://www.zhihu.com/question/425635450)
-1. [父母教育孩子的错误方式有哪些？](https://www.zhihu.com/question/419946924)
 1. [有哪些十年前的问题，在十年后不再是问题？](https://www.zhihu.com/question/432674015)
-1. [LeetCode按照怎样的顺序来刷题比较好？](https://www.zhihu.com/question/36738189)
-1. [现在高二，很焦虑，面对未来很迷茫，可以开导我一下吗？](https://www.zhihu.com/question/433508252)
-1. [假设世界上只有你一个人，你该怎样找到活着的价值以及乐趣？](https://www.zhihu.com/question/433468725)
-1. [怎么样才可以戒掉网瘾呢？](https://www.zhihu.com/question/432321548)
-1. [如果中国传武“大师”的内容都是真的会怎样，会发生什么脑洞故事？](https://www.zhihu.com/question/395074000)
 1. [坚持吃什么或喝什么能改善皮肤状态？](https://www.zhihu.com/question/284643508)
-1. [2021 秋招，你还会推荐应届生进入互联网行业吗，这个行业的前景如何？](https://www.zhihu.com/question/413180643)
-1. [相爱的女朋友去世是什么感受？](https://www.zhihu.com/question/352794081)
-1. [有没有那种虐心古言？](https://www.zhihu.com/question/340288963)
-1. [有哪些家居决定，会让入住后家里轻松保持整洁？](https://www.zhihu.com/question/429611035)
-1. [为什么有很多男生打游戏就可以很快乐？](https://www.zhihu.com/question/347424469)
 1. [从业十年以后，您认为作律师主要是靠业务水平还是靠人际关系？](https://www.zhihu.com/question/431546171)
 1. [成都确诊新冠女孩发声：「我也是受害者，向成都市民致歉」，她需要道歉吗？被「网暴」后会造成哪些心理伤害？](https://www.zhihu.com/question/434008740)
 1. [大学一个人是常态吗?](https://www.zhihu.com/question/432907410)
-1. [如何看待《令人心动的offer》第二季第五期丁辉被淘汰？](https://www.zhihu.com/question/434106189)
-1. [如何评价综艺《令人心动的offer》第二季第五期？](https://www.zhihu.com/question/434086284)
 1. [如何评价《电锯人》第二部及动画化的情报？](https://www.zhihu.com/question/434057058)
 1. [如何看待以色列官员称外星人真实存在？](https://www.zhihu.com/question/433978913)
 1. [有哪些让人眼前一亮，相见恨晚的卫衣值得推荐？](https://www.zhihu.com/question/371546377)
