--- a/archives/2020-12-11.md
+++ b/archives/2020-12-11.md
@@ -1,55 +1,64 @@
 # 2020-12-11
 
-共 89 条
+共 97 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Fri Dec 11 2020 09:29:40 GMT+0800 (CST) -->
+<!-- 最后更新时间 Fri Dec 11 2020 10:10:10 GMT+0800 (CST) -->
 1. [如何看待男朋友没什么钱却花 298 买《赛博朋克2077》，我说他，他还反驳我不懂？](https://www.zhihu.com/question/395466027)
 1. [如何看待苏宁将全部股权质押给阿里？这是一种什么操作？](https://www.zhihu.com/question/434233129)
 1. [同事怀孕了，我不想再让她蹭车了，我该怎么拒绝？这么做是不是不太好？](https://www.zhihu.com/question/423335938)
 1. [为什么有些中老年人做了半辈子的饭菜，做出来的东西还是那么难吃？](https://www.zhihu.com/question/433723927)
 1. [中国人现在能喝的牛奶，到底哪些品牌是真正的好牛奶？](https://www.zhihu.com/question/406534691)
-1. [如何看待《赛博朋克 2077》发售首日「同时在线人数」达到 Steam单机游戏历史第一？](https://www.zhihu.com/question/434170575)
-1. [如何看待韩国「素媛案」主犯赵斗顺将于当地时间 12 月 12 日出狱，评估称再犯可能性达 76％ ？](https://www.zhihu.com/question/434190788)
 1. [如何评价《赛博朋克2077》这个游戏？](https://www.zhihu.com/question/434143828)
+1. [如何看待《赛博朋克 2077》发售首日「同时在线人数」达到 Steam单机游戏历史第一？](https://www.zhihu.com/question/434170575)
 1. [如何看待教育部表示「对于要求家长批改作业等行为，发现一起严处一起」？传递出什么信号？](https://www.zhihu.com/question/434174869)
-1. [如何评价12月10日OPPO Reno5发布会？有哪些亮点和槽点？](https://www.zhihu.com/question/434174009)
+1. [如何看待韩国「素媛案」主犯赵斗顺将于当地时间 12 月 12 日出狱，评估称再犯可能性达 76％ ？](https://www.zhihu.com/question/434190788)
+1. [如何看待中国驻美国大使馆推特账号遭黑客攻击？](https://www.zhihu.com/question/434199178)
 1. [张近东等将苏宁集团全部股份质押给阿里巴巴旗下公司，意味着什么？后续会如何发展？](https://www.zhihu.com/question/434234041)
 1. [赛博朋克到底是什么意思？](https://www.zhihu.com/question/340228753)
-1. [如何看待中国驻美国大使馆推特账号遭黑客攻击？](https://www.zhihu.com/question/434199178)
+1. [12 月 10 日，成都新增 2 例确诊病例，2 例无症状感染者，现在情况怎么样了？](https://www.zhihu.com/question/434262049)
 1. [你在吃自助时最讨厌什么？](https://www.zhihu.com/question/63212359)
-1. [库里都那么有钱了，为什么不降薪让球队获得更好的发展呢？](https://www.zhihu.com/question/434186011)
+1. [有人和分手很久的前任复合吗？](https://www.zhihu.com/question/346192910)
 1. [两车在高速上并排停车引发追尾，追尾小车负主要责任，对此你怎么看？](https://www.zhihu.com/question/434032959)
 1. [12 月 10 日台湾宜兰县海域发生 5.8 级地震，福建福州、厦门等地亦有明显震感，目前情况如何？](https://www.zhihu.com/question/434263181)
-1. [有人和分手很久的前任复合吗？](https://www.zhihu.com/question/346192910)
+1. [库里都那么有钱了，为什么不降薪让球队获得更好的发展呢？](https://www.zhihu.com/question/434186011)
 1. [有哪些像东罗马那样曾经是一个大国但是领土逐步被蚕食到几乎只剩首都后才亡国的国家？](https://www.zhihu.com/question/433023905)
-1. [辛巴被立案调查，因涉案金额过大或面临 15 年有期徒刑，这会对其公司甚至整个直播带货行业产生多大影响？](https://www.zhihu.com/question/434147673)
-1. [如果把地球打穿，穿过球心，人从洞口跳进去，会怎么样?](https://www.zhihu.com/question/340245424)
 1. [为什么登陆艇不用侧开门，门装在正面不就给机枪直接架死了吗?](https://www.zhihu.com/question/431852718)
 1. [养了2年半的边牧，不能碰，总是时不时咬人怎么办？](https://www.zhihu.com/question/433519463)
 1. [男友全职写网文一直扑街我该怎么办?](https://www.zhihu.com/question/434119518)
-1. [如何看待米哈游创始人对原神钟离事件没有明显的反应？](https://www.zhihu.com/question/434066279)
+1. [如果把地球打穿，穿过球心，人从洞口跳进去，会怎么样?](https://www.zhihu.com/question/340245424)
 1. [善良是不是一种很廉价的品质？](https://www.zhihu.com/question/25673349)
+1. [辛巴被立案调查，因涉案金额过大或面临 15 年有期徒刑，这会对其公司甚至整个直播带货行业产生多大影响？](https://www.zhihu.com/question/434147673)
+1. [如何看待米哈游创始人对原神钟离事件没有明显的反应？](https://www.zhihu.com/question/434066279)
+1. [从小一直缺爱的女生会有哪些特征？](https://www.zhihu.com/question/279159280)
 1. [王者荣耀有没有越打越爽的上路？](https://www.zhihu.com/question/424873560)
-1. [如何看待甘肃某检察院采购的华为手机比市场价高一倍？单位真实团购的价格是偏高还是偏低？](https://www.zhihu.com/question/433785956)
-1. [医学生因为一件错事，被老师当着全班的面说不配当医生，该怎么办？](https://www.zhihu.com/question/425007247)
-1. [《海贼王》要是山治中途找到了all blue是会继续冒险还是离开草帽团？](https://www.zhihu.com/question/430991503)
-1. [有哪些一听就能让人发奋好好学习的句子？](https://www.zhihu.com/question/355531661)
-1. [情侣之间有哪些有趣又好玩的「套路」？](https://www.zhihu.com/question/275937805)
 1. [大学有什么东西是真的？](https://www.zhihu.com/question/430807321)
-1. [一个普通人如何成为作家/小说家？](https://www.zhihu.com/question/328727788)
-1. [能看得懂编程，但自己写却一点都写不出来怎么办？](https://www.zhihu.com/question/433391701)
+1. [医学生因为一件错事，被老师当着全班的面说不配当医生，该怎么办？](https://www.zhihu.com/question/425007247)
+1. [有哪些一听就能让人发奋好好学习的句子？](https://www.zhihu.com/question/355531661)
 1. [比武招亲是不是逃离“父母之命，媒妁之言”的最好方式？](https://www.zhihu.com/question/434230870)
+1. [有没有可能外星人的智力远超于人类呢，以致于我们根本无法理解它们的存在？](https://www.zhihu.com/question/433695554)
+1. [《海贼王》要是山治中途找到了all blue是会继续冒险还是离开草帽团？](https://www.zhihu.com/question/430991503)
+1. [大家在成都的真实生活状态是怎样的？](https://www.zhihu.com/question/410535427)
+1. [长相一般的女生能得到帅哥的青睐吗？](https://www.zhihu.com/question/410986119)
+1. [如果有机会和天津邮政博物馆馆长面对面交流，你有什么想问的？](https://www.zhihu.com/question/433973014)
+1. [可以推荐一款电脑录屏软件吗？](https://www.zhihu.com/question/26614459)
+1. [人生低谷应该如何度过?](https://www.zhihu.com/question/427058564)
+1. [如何看待甘肃某检察院采购的华为手机比市场价高一倍？单位真实团购的价格是偏高还是偏低？](https://www.zhihu.com/question/433785956)
+1. [情侣之间有哪些有趣又好玩的「套路」？](https://www.zhihu.com/question/275937805)
+1. [能看得懂编程，但自己写却一点都写不出来怎么办？](https://www.zhihu.com/question/433391701)
 1. [如何看待日本网友请愿删除大雄进静香浴室戏份？](https://www.zhihu.com/question/434167908)
 1. [国内能买到的马丁靴/工装靴什么牌子比较好？](https://www.zhihu.com/question/295022377)
 1. [2021年元旦去哪里跨年？](https://www.zhihu.com/question/432185115)
+1. [有没有大神预测一下2020年12月份的英语四级作文和翻译呢？](https://www.zhihu.com/question/426784573)
 1. [面对一个满眼都是你的人和一个所有一切都与你无关的但你却喜欢的人，你会怎么选择?](https://www.zhihu.com/question/425128066)
+1. [如何评价12月10日OPPO Reno5发布会？有哪些亮点和槽点？](https://www.zhihu.com/question/434174009)
+1. [送女友哪些礼物绝不会出错？](https://www.zhihu.com/question/392954061)
 1. [如何看待山东农业大学疑现女德讲座，宣称「相貌迷人穿着暴露女子易受性骚扰」？](https://www.zhihu.com/question/434148165)
+1. [一个普通人如何成为作家/小说家？](https://www.zhihu.com/question/328727788)
 1. [一个空盒子不受外界因素影响和干扰，它凭空产生一只猫的几率是多少？](https://www.zhihu.com/question/434005535)
 1. [《英雄联盟》设计一个新英雄，大招是吸取敌方英雄一个灵魂，我死他也死，有可玩性吗？](https://www.zhihu.com/question/433393062)
 1. [有哪些别出心裁的情话?](https://www.zhihu.com/question/402009722)
 1. [英雄联盟 S11 新装备「收集者」强在哪里？](https://www.zhihu.com/question/433414507)
-1. [送女友哪些礼物绝不会出错？](https://www.zhihu.com/question/392954061)
 1. [你在玩《明日方舟》的过程中，是否有精二的某个干员预期很高，但实际很少用的上的干员？](https://www.zhihu.com/question/433630089)
 1. [怎么看待网红模特王柠萌离婚？十八九岁结婚生孩子对大多数女生来说真的可行吗？](https://www.zhihu.com/question/433620607)
 1. [当一个人类能举起20w吨的巨型邮轮，人类的武器还能杀死他吗？](https://www.zhihu.com/question/431102613)
@@ -79,7 +88,6 @@
 1. [为什么不少人说《大秦赋》不好看？](https://www.zhihu.com/question/433853996)
 1. [如何看待三亚景区 28 元一根的烤肠？烤肠为什么频繁成为近期热议话题？](https://www.zhihu.com/question/434092613)
 1. [到底怎么开始学化妆？](https://www.zhihu.com/question/302940225)
-1. [有没有大神预测一下2020年12月份的英语四级作文和翻译呢？](https://www.zhihu.com/question/426784573)
 1. [如何看待上海为独居老人装智能水表， 12 小时不走字自动报警？](https://www.zhihu.com/question/434145585)
 1. [如何看待荣耀即将获售高通芯片，CEO赵明喊话「要直面华为，做国内第一」？荣耀未来要面临哪些挑战？](https://www.zhihu.com/question/434163809)
 1. [2的次方数里有没有哪个数是3的倍数？](https://www.zhihu.com/question/433987665)
