--- a/archives/2020-12-13.md
+++ b/archives/2020-12-13.md
@@ -1,9 +1,9 @@
 # 2020-12-13
 
-共 118 条
+共 125 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Sun Dec 13 2020 18:01:40 GMT+0800 (CST) -->
+<!-- 最后更新时间 Sun Dec 13 2020 19:01:28 GMT+0800 (CST) -->
 1. [今天是南京大屠杀死难者「国家公祭日」，对此你有什么想说的？我们又能从历史中吸取到哪些教训？](https://www.zhihu.com/question/434587937)
 1. [如何评价媒体评社区团购：互联网巨头理应在科技创新上有更多担当和追求，别只惦记着几捆白菜？](https://www.zhihu.com/question/434417447)
 1. [安全带这么重要，为什么不设计成不系车就无法启动？](https://www.zhihu.com/question/30162877)
@@ -16,41 +16,49 @@
 1. [什么样家庭的男生会很宠女朋友？](https://www.zhihu.com/question/313152078)
 1. [甲骨文宣布将总部从加州迁往得克萨斯，为何硅谷科技公司纷纷逃离？迁往得克萨斯有什么吸引力？](https://www.zhihu.com/question/434610442)
 1. [2020 年快结束了，秋冬各地陆续出现散发病例，疫情发展会影响春节回家过年吗？](https://www.zhihu.com/question/434611425)
-1. [我国卫生巾真的贵吗，处于什么价格水平？能否从成本等不同角度解释下？](https://www.zhihu.com/question/418037409)
 1. [如何看待清华大学老师被指孩子出生三天后将其遗弃至今未上户，当事人：长期被「家暴」想要抚养权？](https://www.zhihu.com/question/434516431)
-1. [我们每天自律、认真学习最终的目的到底是什么？](https://www.zhihu.com/question/341125873)
-1. [城市经济三季报陆续出炉，如何看待对「南北经济差距」的讨论？面对差距，北方的城市需要做什么？](https://www.zhihu.com/question/434197542)
+1. [我国卫生巾真的贵吗，处于什么价格水平？能否从成本等不同角度解释下？](https://www.zhihu.com/question/418037409)
 1. [如何看待网友恶意 P 图制作「南京机场遣返成都乘客」告示牌，可能面临什么后果？](https://www.zhihu.com/question/434514806)
+1. [城市经济三季报陆续出炉，如何看待对「南北经济差距」的讨论？面对差距，北方的城市需要做什么？](https://www.zhihu.com/question/434197542)
+1. [我们每天自律、认真学习最终的目的到底是什么？](https://www.zhihu.com/question/341125873)
 1. [有哪些你追了很多女生才明白的道理？](https://www.zhihu.com/question/385019055)
 1. [如何看待山西运城马戏团老虎失控咬人，马戏团是否应该被取缔？](https://www.zhihu.com/question/434496090)
-1. [什么算是人生的顶级享受？](https://www.zhihu.com/question/56328597)
 1. [为什么学了模数电还是看不懂较复杂的电路图？](https://www.zhihu.com/question/432824969)
-1. [如何评价《追光吧！哥哥》第二期？](https://www.zhihu.com/question/434537286)
 1. [如何看待苹果可能考虑移除充电线等配件这件事？](https://www.zhihu.com/question/434207581)
 1. [你们的本科毕业论文都是几天完成的？](https://www.zhihu.com/question/275580447)
+1. [想给自己喜欢的男孩子安排赛博朋克2077，不知道我要怎么做?](https://www.zhihu.com/question/434256025)
+1. [骁龙865手机能使用到4年以上吗？](https://www.zhihu.com/question/427117777)
 1. [成长过程中是什么导致了孩子不愿再跟家长沟通？](https://www.zhihu.com/question/266753012)
-1. [秋冬男生需要的基本款衣服有哪些搭配？](https://www.zhihu.com/question/36045209)
+1. [29岁了，相亲无数次，好不容易遇见一个聊得来的人，但是身高外形不是自己想要的那种，该如何抉择呢？](https://www.zhihu.com/question/422905675)
 1. [可以用医保卡给直系亲属拿药吗？](https://www.zhihu.com/question/314496706)
-1. [什么时候你突然觉得自己长大了？](https://www.zhihu.com/question/54307369)
 1. [五菱宏光miniEV电动车的缺点是什么吗？为什么比亚迪特斯拉不出迷你电动车？](https://www.zhihu.com/question/430633799)
-1. [孩子为什么写作业慢？](https://www.zhihu.com/question/432767767)
-1. [有哪些平价优质的汉服推荐?](https://www.zhihu.com/question/430938901)
-1. [前途和ta只能选一个你选会什么？](https://www.zhihu.com/question/429992185)
+1. [什么算是人生的顶级享受？](https://www.zhihu.com/question/56328597)
+1. [为什么NVIDIA和AMD公版显卡纷纷摒弃涡轮散热器而采用多风扇散热设计？](https://www.zhihu.com/question/434410822)
+1. [想读博以后去高校，值得吗？](https://www.zhihu.com/question/429599392)
+1. [男女分手半年后复合的概率大吗？](https://www.zhihu.com/question/370048895)
 1. [考上编制是一种怎样的体验？](https://www.zhihu.com/question/64229374)
-1. [如何看待男朋友23点必睡 ?](https://www.zhihu.com/question/365619051)
-1. [为什么这季《演员请就位》口碑最好的是尔冬升？](https://www.zhihu.com/question/433301396)
-1. [每个月工资4800，怎么存钱？](https://www.zhihu.com/question/433122058)
-1. [如何看待大学生贷款买顶配游戏本？是否有必要？](https://www.zhihu.com/question/434145656)
 1. [女生怎样发朋友圈才能被其他沙雕网友发现？](https://www.zhihu.com/question/432410207)
-1. [有哪些景点让你觉得美到不真实？](https://www.zhihu.com/question/430519471)
-1. [如何看待 12.17 日德云七队的节目单，秦霄贤和何九华搭档并攒底？](https://www.zhihu.com/question/434353991)
+1. [孩子为什么写作业慢？](https://www.zhihu.com/question/432767767)
+1. [如何评价《追光吧！哥哥》第二期？](https://www.zhihu.com/question/434537286)
+1. [什么时候你突然觉得自己长大了？](https://www.zhihu.com/question/54307369)
+1. [异地恋会不会很辛苦？](https://www.zhihu.com/question/428389509)
+1. [秋冬男生需要的基本款衣服有哪些搭配？](https://www.zhihu.com/question/36045209)
+1. [前途和ta只能选一个你选会什么？](https://www.zhihu.com/question/429992185)
+1. [如何看待大学生贷款买顶配游戏本？是否有必要？](https://www.zhihu.com/question/434145656)
+1. [如何看待男朋友23点必睡 ?](https://www.zhihu.com/question/365619051)
+1. [每个月工资4800，怎么存钱？](https://www.zhihu.com/question/433122058)
+1. [有哪些平价优质的汉服推荐?](https://www.zhihu.com/question/430938901)
 1. [多喝奶对长高有用吗?](https://www.zhihu.com/question/426002620)
 1. [男生的初恋究竟有多重要？](https://www.zhihu.com/question/284422641)
-1. [三体人能打赢奥特曼里的人类吗？](https://www.zhihu.com/question/431673739)
 1. [如何看待董明珠发布5G手机，2699 元起售，官网两天卖出 75 台？时隔两年格力再推新手机有何考量？](https://www.zhihu.com/question/434021475)
-1. [怎么压制上课说话的学生?](https://www.zhihu.com/question/422882343)
+1. [哪一本小说是你心头的白月光？](https://www.zhihu.com/question/370641581)
 1. [你手机里唯一的一款游戏是什么？](https://www.zhihu.com/question/430068341)
 1. [人的心机可以可怕到什么程度？](https://www.zhihu.com/question/431044917)
+1. [为什么这季《演员请就位》口碑最好的是尔冬升？](https://www.zhihu.com/question/433301396)
+1. [有哪些景点让你觉得美到不真实？](https://www.zhihu.com/question/430519471)
+1. [如何看待 12.17 日德云七队的节目单，秦霄贤和何九华搭档并攒底？](https://www.zhihu.com/question/434353991)
+1. [三体人能打赢奥特曼里的人类吗？](https://www.zhihu.com/question/431673739)
+1. [怎么压制上课说话的学生?](https://www.zhihu.com/question/422882343)
 1. [为什么吃道具是剧组大忌？](https://www.zhihu.com/question/47907880)
 1. [有哪些皮肤很白的明星？](https://www.zhihu.com/question/321631237)
 1. [如何评价微软研究院开发的AI量化投资平台Qlib？](https://www.zhihu.com/question/434138202)
@@ -63,7 +71,6 @@
 1. [如何看待“中国男足振兴计划”全面失败，2020六大目标全部落空？](https://www.zhihu.com/question/434286196)
 1. [如何评价斗罗大陆134集？](https://www.zhihu.com/question/433566197)
 1. [陈凯歌的《无极》到底烂在哪里？](https://www.zhihu.com/question/20702665)
-1. [哪一本小说是你心头的白月光？](https://www.zhihu.com/question/370641581)
 1. [生完孩子一年多没上班，带孩子过程总是烦恼多过快乐，各种胡思乱想，该怎么办？](https://www.zhihu.com/question/303999777)
 1. [有哪些适合冬天发的温柔文案？](https://www.zhihu.com/question/428926458)
 1. [有哪些值得你坚持下去的好习惯？](https://www.zhihu.com/question/418265751)
